SkeletonViewler düzenlendi.

--- a/MovieDB/View/CollectionViewCell/NowPlayingMovieCollectionViewCell/NowPlayingMovieCollectionViewCell.xib
+++ b/MovieDB/View/CollectionViewCell/NowPlayingMovieCollectionViewCell/NowPlayingMovieCollectionViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -27,13 +27,20 @@
                                 <integer key="value" value="24"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Name " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qb1-nC-xC1">
-                        <rect key="frame" x="0.0" y="240" width="160" height="40"/>
+                        <rect key="frame" x="0.0" y="248" width="160" height="32"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+                            <userDefinedRuntimeAttribute type="number" keyPath="linesCornerRadius">
+                                <integer key="value" value="10"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </label>
                 </subviews>
             </view>
@@ -44,9 +51,12 @@
                 <constraint firstAttribute="trailing" secondItem="FQO-X2-ZlK" secondAttribute="trailing" id="hHT-Bt-5c6"/>
                 <constraint firstAttribute="bottom" secondItem="Qb1-nC-xC1" secondAttribute="bottom" id="kfx-fJ-LZI"/>
                 <constraint firstItem="FQO-X2-ZlK" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="oAL-vd-3ja"/>
-                <constraint firstItem="Qb1-nC-xC1" firstAttribute="top" secondItem="FQO-X2-ZlK" secondAttribute="bottom" id="t3c-js-7ZA"/>
+                <constraint firstItem="Qb1-nC-xC1" firstAttribute="top" secondItem="FQO-X2-ZlK" secondAttribute="bottom" constant="8" id="t3c-js-7ZA"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
+            </userDefinedRuntimeAttributes>
             <connections>
                 <outlet property="movieNameLabel" destination="Qb1-nC-xC1" id="q7d-x7-lGV"/>
                 <outlet property="moviePosterImageView" destination="FQO-X2-ZlK" id="iwm-P2-3b1"/>
